Lowering resource request for Tomcat instance
git-svn-id: https://svn.apache.org/repos/asf/incubator/syncope/trunk@1334917 13f79535-47bb-0310-9956-ffa450edef68